--- a/angular.json
+++ b/angular.json
@@ -3,20 +3,6 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-<<<<<<< HEAD
-    "boilerplate-angular": {
-      "projectType": "application",
-      "schematics": {},
-=======
-<<<<<<< HEAD
-    "SportsStore": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:class": {
-          "skipTests": true
-        },
-        "@schematics/angular:component": {
-=======
     "front2": {
       "projectType": "application",
       "schematics": {
@@ -25,7 +11,6 @@
           "skipTests": true
         },
         "@schematics/angular:class": {
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
           "skipTests": true
         },
         "@schematics/angular:directive": {
@@ -47,7 +32,6 @@
           "skipTests": true
         }
       },
->>>>>>> master
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -55,15 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-<<<<<<< HEAD
-            "outputPath": "dist/boilerplate-angular",
-=======
-<<<<<<< HEAD
-            "outputPath": "dist/SportsStore",
-=======
             "outputPath": "dist/front2",
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
->>>>>>> master
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -74,18 +50,6 @@
               "src/assets"
             ],
             "styles": [
-<<<<<<< HEAD
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
-=======
-<<<<<<< HEAD
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
->>>>>>> master
-            ],
-            "scripts": []
-=======
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css"
             ],
@@ -96,7 +60,6 @@
               "src/assets/js/nouislider.min.js",
               "src/assets/js/jquery.zoom.min.js"
             ]
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
           },
           "configurations": {
             "production": {
@@ -109,6 +72,7 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
+              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -131,42 +95,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-<<<<<<< HEAD
-            "browserTarget": "boilerplate-angular:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "boilerplate-angular:build:production"
-=======
-<<<<<<< HEAD
-            "browserTarget": "SportsStore:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "SportsStore:build:production"
-=======
             "browserTarget": "front2:build"
           },
           "configurations": {
             "production": {
               "browserTarget": "front2:build:production"
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
->>>>>>> master
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-<<<<<<< HEAD
-            "browserTarget": "boilerplate-angular:build"
-=======
-<<<<<<< HEAD
-            "browserTarget": "SportsStore:build"
-=======
             "browserTarget": "front2:build"
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
->>>>>>> master
           }
         },
         "test": {
@@ -181,15 +121,7 @@
               "src/assets"
             ],
             "styles": [
-<<<<<<< HEAD
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-=======
-<<<<<<< HEAD
->>>>>>> master
-              "src/styles.css"
-=======
               "src/styles.scss"
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
             ],
             "scripts": []
           }
@@ -211,46 +143,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-<<<<<<< HEAD
-            "devServerTarget": "boilerplate-angular:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "boilerplate-angular:serve:production"
-=======
-<<<<<<< HEAD
-            "devServerTarget": "SportsStore:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "SportsStore:serve:production"
-=======
             "devServerTarget": "front2:serve"
           },
           "configurations": {
             "production": {
               "devServerTarget": "front2:serve:production"
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
->>>>>>> master
             }
           }
         }
       }
     }
   },
-<<<<<<< HEAD
-  "defaultProject": "boilerplate-angular"
-}
-=======
-<<<<<<< HEAD
-  "defaultProject": "SportsStore",
-  "cli": {
-    "analytics": "6a2e566e-4922-4c17-a02e-7158b24039ed"
-=======
   "defaultProject": "front2",
   "cli": {
     "analytics": "eae05cf9-d98a-4182-8b55-aa5be7779426"
->>>>>>> f36487e2b15693a2d0ba5ed1899010ab220fdc3e
   }
 }
->>>>>>> master
